# LangChain-The-framework

./: .gitignore  README.md  main.py  pyproject.toml
CH_1/: 1_Basics.py  1_LLM_Call.py  1_init_chat.py  2_Messages.py  2_Prompts.py  structured_output.py
CH_2/: 1_First_Chain.py  2_parallel_chains.py  3_Conditional_chains.py
CH_3/: ReAct_db_Agent.py  ReAct_intro_intro.py  demo.py  init_db.py
CH_3/SalesDB/: salesdb.db
